# DRF-test

./: .gitignore  pyproject.toml
drf_sample/: manage.py
drf_sample/drf_sample/: asgi.py  settings.py  urls.py  wsgi.py
drf_sample/tonus/: admin.py  apps.py  filters.py  models.py  permission.py  serializers.py  views.py
drf_sample/tonus/migrations/: 0001_initial.py  0002_alter_advuser_is_activated.py  0003_alter_advuser_birthday_at.py  0004_alter_client_options_alter_exercise_options_and_more.py  0005_alter_advuser_birthday_at.py  0006_alter_exercise_ex_type_alter_exercise_trainer.py  0007_alter_exercise_ex_type.py  0008_alter_exercise_clients.py  0009_alter_exercise_clients.py  0010_alter_exercise_clients.py  0011_alter_exercise_trainer.py  0012_exercise_time_alter_exercise_date.py  0013_alter_exercise_options.py  0014_alter_exercise_clients_alter_exercise_date_and_more.py  0015_alter_clientexerciserelation_options_exercise_likers.py  0016_alter_advuser_birthday_at.py  0017_alter_clientexerciserelation_rate.py
drf_sample/tonus/tests/: test_api.py
